--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  firebase_core: ^2.4.1
+  cloud_firestore: ^4.3.1
+  firebase_auth: ^4.2.2
+  firebase_storage: ^11.0.10
+  firebase_database: ^10.0.9
+
   cupertino_icons: ^1.0.2
-  flutter_native_splash: ^2.2.19
+  easy_splash_screen: ^1.0.4
   easy_localization: ^3.0.1
+  loading_animation_widget: ^1.2.0+4
+  shared_preferences: ^2.0.18
+
+  google_nav_bar: ^5.0.6
+  flutter_animate: ^4.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/translations/
     - assets/splash_screen.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -91,15 +104,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
-flutter_native_splash:
-  color: "#ffffff"
-  image: assets/splash_screen.png
-  color_dark: "#121212"
-
-  android_12:
-    image: assets/splash_screen.png
-    icon_background_color: "#ffffff"
-    icon_background_color_dark: "#121212"
-
-  web: false
