--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   uuid: ^3.0.7
   provider: ^6.0.5
-  csv: ^5.0.1
+  flutter_screenutil: ^5.7.0
 
 dev_dependencies:
   flutter_test:
